--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,53 @@
 .App {
-  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  /* display: flex;
+  justify-content: center; */
+  /* padding-top: 30px; */
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.filter-container {
+  font-family: 'Source Sans Pro', sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.App .Search {
+  background-color: #33caca;
+  box-sizing: border-box;
+  width: 140px;
+  height: 42px;
+  box-shadow: 0px 0px 0px -1px rgba(0,0,0,0.2), 0px 0px 5px 0px rgba(0,0,0,0.14), 0px 0px 5px 0px rgba(0,0,0,0.12);
+  outline: none;
+  border-radius: 25px;
+  outline-color: white;
+  border: none;
+}
+
+.App .Search:hover {
+  cursor: pointer;
+}
+
+.App .nav-link {
+  background-color: #33caca;
+  box-sizing: border-box;
+  width: 140px;
+  height: 42px;
+  /* box-shadow: 0px 0px 0px -1px rgba(0,0,0,0.2), 0px 0px 5px 0px rgba(0,0,0,0.14), 0px 0px 5px 0px rgba(0,0,0,0.12); */
+  outline: none;
+  border-radius: 5px;
+  outline-color: white;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  padding-top: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 25px;
+}
+
+.search-parent {
+  width: 50%;
+  display: flex;
+  padding-left: 15px;
 }
